# ai-ml-portfolio-starter

./: .coverage  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  DEFINITION_OF_DONE.md  GEMINI.md  INDEX.md  LICENSE  Makefile  README.md  lint-staged.config.js  package-lock.json  package.json  pyproject.toml
.claude/agents/: architect.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
.prompts/: architect.md  coder.md  reviewer.md  tester.md
.prompts/implementer/: coder.md
adr/: ADR-001-rag-deps-dev-extras.md  template.md
agent-playground-lite/: README.md  demo.py  requirements.txt
ai-docs/: AI-ML_PortfolioV2.md  Interactive web app build.md  LLM Agent Codebase Playbook.md  README.md  Senior LLM Project Architect & Codebase Orchestrator.md  ai_ml_portfolio_starter_project_board_scaffolds_and_agentic_adaptation.md  example_json_manifest.json  mcp-list.md  project_board_plan.md
codefetch/: codebase.md
docs/: AGENT_RUNBOOK.md  CONVENTIONS.md
llm-datasets-toolkit/: README.md  demo.py  requirements.txt
llm-deployment-fastapi/: README.md  demo.py
llm-quantization-benchmarks/: README.md  demo.py  requirements.txt
local-rag-assistant/: README.md  demo.py  requirements.txt
mlops-ci-eval-pipeline/: README.md  demo.py  requirements.txt
scripts/: README.md  agent_task.sh  gemini.sh
tests/: test_embed.py  test_health.py  test_retrieve.py
tools/: diff_apply.py  index_code.py  repo_map.py
workflow-orchestrator-minimal/: README.md  demo.py  requirements.txt
(+39 files in other folders)
