[project]
name = "ai-ml-portfolio-starter"
version = "0.1.0"
description = "Starter with FastAPI + RAG indexer and agentic workflow"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "sentence-transformers>=3.0",
  "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP","PL"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
follow_imports = "skip"
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_typed = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
